syntax = "proto3";

package whiterabbit;

import "google/protobuf/wrappers.proto";

message PageInfo {
  bool hasPreviousPage = 1;
  bool hasNextPage = 2;
  google.protobuf.StringValue startCursor = 3;
  google.protobuf.StringValue endCursor = 4;
}

message Sort {
  string field = 1;
  Order order = 2;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message Pagination {
  optional string after = 1;
  optional string before = 2;
  uint32 size = 3;
  optional uint32 offset = 4;
}

message FindAllRequest {
  optional string query = 1;
  Pagination pagination = 2;
  repeated Sort sort = 3;
}

message RelationshipRequest {
  string id = 1;
  FindAllRequest input = 2;
}
